--- a/proyectoBar/Bar/app/src/main/res/layout/pedidovista.xml
+++ b/proyectoBar/Bar/app/src/main/res/layout/pedidovista.xml
@@ -11,7 +11,7 @@ android:fillViewport="true">
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="16dp">
+    >
 
     <TextView
         android:id="@+id/textView2"
@@ -78,9 +78,8 @@ android:fillViewport="true">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="369dp"
-        android:layout_height="154dp"
-        android:layout_marginStart="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="148dp"
         android:layout_marginTop="10dp">
 
         <Button
@@ -88,13 +87,25 @@ android:fillViewport="true">
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginEnd="116dp"
-            android:layout_marginBottom="53dp"
+            android:layout_marginEnd="28dp"
+            android:layout_marginBottom="60dp"
             android:backgroundTint="@color/acento"
             android:text="Confirmar Pedido"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
+        <Button
+            android:id="@+id/btnPagar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginEnd="232dp"
+            android:layout_marginBottom="60dp"
+            android:backgroundTint="@color/acento"
+            android:text="Pagar Pedido"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
-    </LinearLayout>
+</LinearLayout>
 </ScrollView>
